fix: some warnings